Closed Bug 239546 Opened 22 years ago Closed 22 years ago

ASSERTION: Namespaces left on the stack!

Categories

(Core :: DOM: Core & HTML, defect, P2)

x86
Windows XP
defect

Tracking

()

RESOLVED FIXED
mozilla1.8alpha1

People

(Reporter: bc, Assigned: bzbarsky)

References

()

Details

Attachments

(1 file)

Occurs in DOM TS Level 2 Core for http://dom-ts.bclary.com/build/ecmascript/level2/core/files/staff2.svg Note this file fails to parse due to an unparsed entity 0[2e4990]: ###!!! ASSERTION: Namespaces left on the stack!: 'mNameSpaceStack.Count() == 0', file c:/work/mozilla_source/trunk/mozilla/content/xml/document/src/nsXMLContentSink.cpp, line 159 stack NTDLL! 77f75a58() nsDebugImpl::Assertion(nsDebugImpl * const 0x002e6d80, const char * 0x0168c1f4, const char * 0x0168c1d4, const char * 0x0168c180, int 159) line 272 nsDebug::Assertion(const char * 0x0168c1f4, const char * 0x0168c1d4, const char * 0x0168c180, int 159) line 109 nsXMLContentSink::~nsXMLContentSink() line 159 + 44 bytes nsXMLContentSink::`scalar deleting destructor'(unsigned int 1) + 15 bytes nsContentSink::Release(nsContentSink * const 0x030f30a8) line 145 + 215 bytes nsXMLContentSink::Release(nsXMLContentSink * const 0x030f30a8) line 189 + 12 bytes nsCOMPtr<nsIContentSink>::~nsCOMPtr<nsIContentSink>() line 510 nsParser::~nsParser() line 355 + 75 bytes nsParser::`scalar deleting destructor'(unsigned int 1) + 15 bytes nsParser::Release(nsParser * const 0x030f2f68) line 359 + 215 bytes nsCOMPtr<nsIStreamListener>::~nsCOMPtr<nsIStreamListener>() line 510 nsDocumentOpenInfo::OnStopRequest(nsDocumentOpenInfo * const 0x0477b9e8, nsIRequest * 0x044d31c0, nsISupports * 0x00000000, unsigned int 0) line 367 nsStreamListenerTee::OnStopRequest(nsStreamListenerTee * const 0x046a2478, nsIRequest * 0x044d31c0, nsISupports * 0x00000000, unsigned int 0) line 66 nsHttpChannel::OnStopRequest(nsHttpChannel * const 0x044d31c8, nsIRequest * 0x03dfca98, nsISupports * 0x00000000, unsigned int 0) line 3394 nsInputStreamPump::OnStateStop() line 499 nsInputStreamPump::OnInputStreamReady(nsInputStreamPump * const 0x03dfca9c, nsIAsyncInputStream * 0x045bb1bc) line 339 + 11 bytes nsInputStreamReadyEvent::EventHandler(PLEvent * 0x03dfcb7c) line 119 PL_HandleEvent(PLEvent * 0x03dfcb7c) line 673 + 10 bytes PL_ProcessPendingEvents(PLEventQueue * 0x009bd7e8) line 608 + 9 bytes _md_TimerProc(HWND__ * 0x00040110, unsigned int 275, unsigned int 0, unsigned long 10983703) line 979 + 9 bytes USER32! 77d43a50() USER32! 77d442c5() USER32! 77d43e6f() USER32! 77d43ddf() nsAppShellService::Run(nsAppShellService * const 0x00a59db8) line 524 main1(int 1, char * * 0x002e2638, nsISupports * 0x0099f2f0) line 1303 + 32 bytes main(int 1, char * * 0x002e2638) line 1716 + 37 bytes mainCRTStartup() line 338 + 17 bytes KERNEL32! 77e814c7()
Attached patch FixSplinter Review
Comment on attachment 145792 [details] [diff] [review] Fix I believe this is the right thing to do.
Attachment #145792 - Flags: superreview?(peterv)
Attachment #145792 - Flags: review?(bugmail)
Attachment #145792 - Flags: superreview?(peterv) → superreview+
Checked in for 1.8a
Assignee: general → bzbarsky
Priority: -- → P2
Target Milestone: --- → mozilla1.8alpha
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Component: DOM: Core → DOM: Core & HTML
QA Contact: ian → general
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: