Clear the namespace stack on a well-formedness error, since we're clearing our state then.  Bug 239546, r=sicking, sr=peterv